feat(migrate): make the repo become monorepo

--- a/be/package.json
+++ b/be/package.json
@@ -12,7 +12,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node --env-file=.env dist/src/index.js",
-    "dev": "tsx watch --env-file=.env src/index.ts",
+    "dev": "tsx watch --env-file=../.env src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "vitest run",
@@ -31,13 +31,10 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.9.2",
     "@types/supertest": "^6.0.3",
-    "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
     "vitest": "^4.0.6"
   }
 }
