--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -1,14 +1,9 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "target": "esnext",
     "module": "commonjs",
-    "strict": true,
-    "noImplicitAny": true,
     "outDir": "dist",
-    "sourceMap": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "sourceMap": true
   },
   "include": [
     "./*.js",
