--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,9 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "paths": {
-            "@jade/*": [
-                "./*"
-            ]
-        },
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "module": "commonjs"
     },
     "include": [
-        "deploy/monitor/**/*",
-        "be/**/*",
-        "fe/**/*"
+        "deploy/monitor/**/*"
     ]
 }
