--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
         "typecheck:all": "npm run typecheck --workspace=be && cd fe && tsc -b"
     },
     "dependencies": {
-        "@sentry/node": "^8.0.0"
+        "@prisma/adapter-pg": "^7.0.1",
+        "@prisma/client": "^7.0.1",
+        "@sentry/node": "^8.0.0",
+        "dotenv": "^17.2.3",
+        "nodemailer": "^7.0.11",
+        "pg": "^8.16.3",
+        "supertokens-node": "^23.1.0"
     },
     "devDependencies": {
         "@types/node": "^24.10.1",
+        "@types/pg": "^8.15.6",
         "eslint": "^9.39.1",
+        "prisma": "^6.19.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3"
     }
