--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,10 +1,8 @@
 {
     "compilerOptions": {
         /* Language and Environment */
-        "target": "ES2022",
-        "lib": [
-            "ES2022"
-        ],
+        "module": "ESNext",
+        "target": "ES2023",
         /* Modules */
         "moduleResolution": "node",
         "baseUrl": ".",
@@ -22,6 +20,6 @@
         /* Interop Constraints */
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
     }
 }
