feat(monorepo): finish the refactor mono repo

--- a/be/package.json
+++ b/be/package.json
@@ -26,6 +26,8 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
     "supertokens-node": "^23.1.0",
     "zod": "^4.1.12"
   },
