--- a/be/package.json
+++ b/be/package.json
@@ -39,6 +39,7 @@
     "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.3",
     "eslint-plugin-format": "^1.0.2",
+    "pino-pretty": "^13.1.3",
     "prisma": "^7.1.0",
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
