--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": "./",
+    "paths": {
+      "@Ciri/*": ["core/*"]
+    }
   },
-  "include": [
-    "./*.js",
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["core/**/*.ts", "test/**/*.ts"]
 }
