--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^17.2.3",
         "nodemailer": "^7.0.11",
         "pg": "^8.16.3",
+        "protobufjs": "^7.5.4",
         "supertokens-node": "^23.1.0"
     },
     "devDependencies": {
