--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,25 +1,20 @@
 {
-    "compilerOptions": {
-        /* Language and Environment */
-        "module": "ESNext",
-        "target": "ES2023",
-        /* Modules */
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "paths": {
-            "@jade/*": [
-                "./*"
-            ]
-        },
-        /* Type Checking */
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
-        /* Interop Constraints */
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-    }
+  "compilerOptions": {
+    /* Language and Environment */
+    "module": "ESNext",
+    "target": "ES2023",
+    /* Modules */
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    /* Type Checking */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    /* Interop Constraints */
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
+  }
 }
