--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,5 @@ jobs:
           cache: "npm"
       - name: Install dependencies
         run: npm ci
+      - name: Build Frontend
+        run: npm run build --workspace=fe
