--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "supertokens-auth-react": "^0.51.0",
