--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "lucide-react": "^0.554.0",
@@ -19,7 +20,8 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "supertokens-auth-react": "^0.51.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
