--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "lucide-react": "^0.554.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "supertokens-auth-react": "^0.51.0",
     "tailwindcss": "^4.1.17",
