fix api generator

--- a/be/package.json
+++ b/be/package.json
@@ -29,6 +29,7 @@
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "supertokens-node": "^23.1.0",
+    "supertokens-web-js": "^0.16.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
