--- a/fe/package.json
+++ b/fe/package.json
@@ -14,11 +14,13 @@
     "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
+    "i18next": "^23.16.8",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^15.7.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "supertokens-auth-react": "^0.51.0",
