--- a/.github/workflows/build-fe-image.yml
+++ b/.github/workflows/build-fe-image.yml
@@ -1,12 +1,12 @@
 name: Build FE Image
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
-      - main
-      - test
-    types:
-      - closed
+      - master
 
 jobs:
   build-and-push:
