--- a/.github/workflows/build-fe-image.yml
+++ b/.github/workflows/build-fe-image.yml
@@ -20,7 +20,7 @@ jobs:
       packages: write
     env:
       IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/jade-fe
-      IMAGE_TAG: ${{ inputs.image_tag }}
+      IMAGE_TAG: latest
 
     steps:
       - name: Checkout
