--- a/.github/workflows/build-fe-image.yml
+++ b/.github/workflows/build-fe-image.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   build-and-push:
     name: Build and push FE image
+    needs:
+      - lint-check
+      - build-fe-workspace
     runs-on: ubuntu-latest
     permissions:
       contents: read
