--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,33 @@ on:
       - master
 
 jobs:
-  lint-check:
+  lint-check-fe:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+      # Setup cache to increase speed
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            fe/node_modules/.vite
+          key: ${{ runner.os }}-vite-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('fe/**.[jt]s', 'fe/**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-vite-${{ hashFiles('**/package-lock.json') }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint frontend
+        run: npm run lint --workspace=fe
+      - name: Build frontend
+        run: npm run build --workspace=fe
+
+  lint-check-be:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,40 +58,33 @@ jobs:
         run: npm ci
       - name: Lint backend
         run: npm run lint --workspace=be
-      - name: Lint frontend
-        run: npm run lint --workspace=fe
     
-  build-fe-workspace:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-      - name: Install dependencies
-        run: npm ci
-      - name: Build Frontend
-        run: npm run build --workspace=fe
-
   build-and-push:
     name: Build and push FE image
-    needs:
-      - lint-check
-      - build-fe-workspace
+    needs: [lint-check-fe, lint-check-be]
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read # 'write' is no longer needed if we don't commit
       packages: write
-    env:
-      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/jade-fe
-      IMAGE_TAG: latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      # 1. CALCULATE VERSION (In-memory only)
+      - name: 'Get Next Version'
+        id: version_bump
+        uses: 'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag-prefix: ${{ github.ref_name == 'master' && 'dev-' || 'test-' }}
+          default: patch
+          # These lines prevent the action from committing or tagging the repo
+          skip-commit: 'true'
+          skip-tag: 'true'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -77,6 +96,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # 2. BUILD AND PUSH 
+      # Uses the calculated version for the Docker tag
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
@@ -84,6 +105,6 @@ jobs:
           file: ./DockerfileFe
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            ghcr.io/${{ github.repository_owner }}/jade-fe:${{ steps.version_bump.outputs.newTag }}
           build-args: 
             API_URL=${{ secrets.API_URL }}
