--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI action for Simple Store
+name: CI/CD For Kuru
 
 on:
   push:
@@ -9,8 +9,41 @@ on:
       - master
 
 jobs:
+  lint-commits:
+    name: Lint commit messages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout (full history for commits)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Lint PR title
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "${{ github.event.pull_request.title }}" | npx commitlint
+
+      - name: Lint commits in PR
+        if: github.event_name == 'pull_request'
+        run: |
+          npx commitlint --from "${{ github.event.pull_request.base.sha }}" --to "${{ github.event.pull_request.head.sha }}" --verbose
+
+      - name: Lint latest push commit
+        if: github.event_name == 'push'
+        run: |
+          npx commitlint --from "${{ github.event.before }}" --to "${{ github.sha }}" --verbose 
+
   lint-check-fe:
     runs-on: ubuntu-latest
+    needs: lint-commits
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,6 +70,7 @@ jobs:
 
   lint-check-be:
     runs-on: ubuntu-latest
+    needs: lint-commits
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -59,7 +93,7 @@ jobs:
       - name: Lint backend
         run: npm run lint --workspace=be
     
-  build-and-push:
+  build-fe-image-push:
     name: Build and push FE image
     needs: [lint-check-fe, lint-check-be]
     runs-on: ubuntu-latest
@@ -83,6 +117,7 @@ jobs:
         with:
           tag-prefix: ${{ github.ref_name == 'master' && 'dev-' || 'test-' }}
           default: patch
+          check-last-commit-only: 'true'
           skip-commit: 'true'
           skip-tag: 'true'
           skip-push: 'true'
@@ -98,14 +133,15 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # 2. BUILD AND PUSH 
-      # Uses the calculated version for the Docker tag
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./DockerfileFe
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/jade-fe:${{ steps.version_bump.outputs.newTag }}
           build-args: 
             API_URL=${{ secrets.API_URL }}
+  
