--- a/be/package.json
+++ b/be/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@sentry/node": "^8.0.0",
+    "nodemailer": "^7.0.11",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
