--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
         "typecheck:all": "npm run typecheck --workspace=be && cd fe && tsc -b"
     },
     "dependencies": {
-        "@prisma/client": "^7.1.0",
-        "@sentry/node": "^8.0.0",
         "dotenv": "^17.2.3",
-        "nodemailer": "^7.0.11",
-        "pg": "^8.16.3",
         "protobufjs": "^7.5.4",
         "supertokens-node": "^23.1.0"
     },
     "devDependencies": {
+        "@commitlint/cli": "^20.2.0",
+        "@commitlint/config-conventional": "^20.2.0",
         "@types/node": "^24.10.1",
         "@types/pg": "^8.15.6",
         "eslint": "^9.39.1",
