--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      
+      # install only commitlint
+      - name: Install commitlint
+        run: npm install -g commitlint
 
       - name: Lint PR title
         if: github.event_name == 'pull_request'
