--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
           git log -1 --pretty=%B "${{ github.sha }}" \
             | npx commitlint --verbose 
 
-  changes:
+  detect-changes:
     name: Detect changed paths
     runs-on: ubuntu-latest
     outputs:
@@ -120,7 +120,7 @@ jobs:
     name: Build and push FE image
     needs: [lint-check-fe, lint-check-be, detect-changes]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (needs.changes.outputs.fe == 'true' || needs.changes.outputs.shared == 'true')
+    if: github.event_name == 'push' && (needs.detect-changes.outputs.fe == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
       contents: read # 'write' is no longer needed if we don't commit
       packages: write
@@ -177,7 +177,7 @@ jobs:
     name: Build and push BE image
     needs: [lint-check-fe, lint-check-be, detect-changes]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (needs.changes.outputs.be == 'true' || needs.changes.outputs.shared == 'true')
+    if: github.event_name == 'push' && (needs.detect-changes.outputs.be == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
       contents: read # 'write' is no longer needed if we don't commit
       packages: write
