--- a/be/env.example
+++ b/be/env.example
@@ -4,7 +4,7 @@
 NODE_ENV=development
 PORT=9190
 
-SUPERTOKENS_CONNECTION_URI=https://auth.simplestore.io.vn
+SUPERTOKENS_CONNECTION_URI=your-supertokens-connection-uri
 APP_NAME=barcode-generator
 API_DOMAIN=http://localhost:9190
 WEBSITE_DOMAIN=http://localhost:4140
