--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -122,7 +122,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (needs.detect-changes.outputs.fe == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
-      contents: read # 'write' is no longer needed if we don't commit
+      contents: write
       packages: write
 
     steps:
@@ -179,7 +179,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (needs.detect-changes.outputs.be == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
-      contents: read # 'write' is no longer needed if we don't commit
+      contents: write
       packages: write
 
     steps:
