--- a/be/env.example
+++ b/be/env.example
@@ -6,7 +6,7 @@ PORT=9190
 
 SUPERTOKENS_CONNECTION_URI=your-supertokens-connection-uri
 APP_NAME=barcode-generator
-API_DOMAIN=http://localhost:9190
+API_DOMAIN=your-base-api-domain
 WEBSITE_DOMAIN=http://localhost:4140
 API_BASE_PATH=/auth
 WEBSITE_BASE_PATH=/auth
