--- a/be/env.example
+++ b/be/env.example
@@ -15,7 +15,7 @@ WEBSITE_BASE_PATH=/auth
 DISABLE_REGISTER=false
 
 # PostgreSQL connection string
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres?schema=public
+DATABASE_URL=your-postgres-url
 
 # Custom environment label (e.g. dev, staging, prod)
 ENVIRONMENT=dev
