--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,6 +52,7 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: filter
         with:
+          base: master
           filters: |
             fe:
               - 'fe/**'
