--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -1,9 +1,9 @@
-name: CD For Kuru Dev
+name: CD For Kuru Prod
 
 on:
   push:
     branches:
-      - release-dev
+      - release-prod
 
 jobs:
   lint-commits:
@@ -28,7 +28,7 @@ jobs:
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
-
+      
       # install only commitlint
       - name: Install commitlint
         run: npm install -g @commitlint/cli @commitlint/config-conventional
@@ -38,16 +38,13 @@ jobs:
         run: |
           git log -1 --pretty=%B "${{ github.event.pull_request.head.sha }}" \
             | npx commitlint --verbose
-
       - name: Lint latest push commit
         if: github.event_name == 'push'
         run: |
           git log -1 --pretty=%B "${{ github.sha }}" \
-            | npx commitlint --verbose
-
+            | npx commitlint --verbose 
   detect-changes:
     name: Detect changed paths
-    needs: lint-commits
     runs-on: ubuntu-latest
     outputs:
       fe: ${{ steps.filter.outputs.fe }}
@@ -61,7 +58,7 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: filter
         with:
-          base: release-dev
+          base: release-prod
           filters: |
             fe:
               - 'fe/**'
@@ -71,7 +68,7 @@ jobs:
               - 'packages/**'
               - 'libs/**'
               - 'Dockerfile*'
-
+              - '.github/**'
   lint-check-fe:
     runs-on: ubuntu-latest
     needs: lint-commits
@@ -123,10 +120,38 @@ jobs:
         run: npm ci
       - name: Lint backend
         run: npm run lint --workspace=be
+  
+  semantic-release-fe:
+    name: Semantic release FE
+    needs: [lint-check-fe, detect-changes]
+    runs-on: ubuntu-latest
+    outputs:
+      fe_version: ${{ steps.fe_version.outputs.newTag }}
+    if: github.event_name == 'push' && (needs.detect-changes.outputs.fe == 'true' || needs.detect-changes.outputs.shared == 'true')
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      - name: Compute FE version
+        id: fe_version
+        uses: 'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag-prefix: fe-prod-
+          default: patch
+          skip-commit: 'true'
+          skip-tag: 'true'
+          skip-push: 'true'
+    
 
   build-fe-image-push:
     name: Build and push FE image
-    needs: [lint-check-fe, detect-changes]
+    needs: [semantic-release-fe, detect-changes]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (needs.detect-changes.outputs.fe == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
@@ -148,7 +173,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 2. BUILD AND PUSH
+      # 2. BUILD AND PUSH 
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
@@ -157,12 +182,48 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/jade-fe:dev
-          build-args: API_URL=${{ secrets.API_URL }}
+            ghcr.io/${{ github.repository_owner }}/jade-fe:${{ needs.semantic-release-fe.outputs.fe_version }}
+          build-args: 
+            API_URL=${{ secrets.API_URL }}
+      - name: Persist FE version (tag)
+        run: |
+          TAG="${{ needs.semantic-release-fe.outputs.fe_version }}"
+          git fetch --tags
+          if git rev-parse "$TAG" >/dev/null 2>&1; then exit 0; fi
+          git tag "$TAG"
+          git push origin "$TAG"
+  
+  semantic-release-be:
+    name: Semantic release BE
+    needs: [lint-check-be, detect-changes]
+    runs-on: ubuntu-latest
+    outputs:
+      be_version: ${{ steps.be_version.outputs.newTag }}
+    if: github.event_name == 'push' && (needs.detect-changes.outputs.be == 'true' || needs.detect-changes.outputs.shared == 'true')
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      - name: Compute BE version
+        id: be_version
+        uses: phips28/gh-action-bump-version@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PACKAGEJSON_DIR: "be"
+        with:
+          tag-prefix: be-prod-
+          default: patch
+          skip-commit: "true"
+          skip-tag: "true"
+          skip-push: "true"
 
   build-be-image-push:
     name: Build and push BE image
-    needs: [lint-check-be, detect-changes]
+    needs: [semantic-release-be, detect-changes]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (needs.detect-changes.outputs.be == 'true' || needs.detect-changes.outputs.shared == 'true')
     permissions:
@@ -173,7 +234,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: "0"
+          fetch-depth: '0'
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -184,7 +246,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 2. BUILD AND PUSH
+      # 2. BUILD AND PUSH 
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
@@ -193,38 +255,12 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ciri-be:dev
-          build-args: API_URL=${{ secrets.API_URL }}
-
-  semantic-release:
-    name: Semantic release
-    needs: [build-fe-image-push, build-be-image-push]
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.newTag }}
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: "0"
-
-      - name: Compute version
-        id: version
-        uses: "phips28/gh-action-bump-version@master"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag-prefix: dev-
-          default: patch
-          skip-commit: "true"
-          skip-tag: "true"
-          skip-push: "true"
-
-      - name: Persist version (tag)
+            ghcr.io/${{ github.repository_owner }}/ciri-be:${{ needs.semantic-release-be.outputs.be_version }}
+          build-args: 
+            API_URL=${{ secrets.API_URL }}
+      - name: Persist BE version (tag)
         run: |
-          TAG="${{ steps.version.outputs.newTag }}"
+          TAG="${{ needs.semantic-release-be.outputs.be_version }}"
           git fetch --tags
           if git rev-parse "$TAG" >/dev/null 2>&1; then exit 0; fi
           git tag "$TAG"
